2012-09-26 bbirtles@mozilla.com
	Added Brian as editor to the spec.

2012-09-25 bbirtles@mozilla.com
	Remove maskType from mask element since it is now defined as the mask-type
	property.
	Fix some typos / grammar.
	Fix some linking issues.
	Add Brian as author.
	Disallow 'mask-image: none alpha'
	Remove some broken links.

2012-09-19 dschulze@adobe.com
	Fxed typos.
	Made correction on syntax for 'mask-image'. Compatible to WebKit again.
	Updated descripton of 'mask-type'.
	Added issues about used bording boxes as discussed with SVG WG.

2012-09-17 dschulze@adobe.com
	'mask-type' just applies to mask element.
	Define border-box and content-box for SVG.
	Add mask type values to 'mask-image'.

2012-09-05 dschulze@adobe.com
	Added new editors Tab Atkins and Dirk Schulze to CSS Masking.

2012-08-29 dschulze@adobe.com
	Removed 'mask-attachment' for now and updated issues to match resolutions of CSS WG.

2012-08-20 dschulze@adobe.com
	Fixed some links.

2012-08-20 dschulze@adobe.com
	Add introduction for 'mask-box-image'.

2012-08-20 dschulze@adobe.com
	Allow <shape>, child and select() values for 'clip-path'.

2012-08-15 dschulze@adobe.com
	Added issues that feature need to be proofed for 'mask-attachment', 'mask-origin' and 'mask-clip'
	Replaced more PNG images with SVG

2012-08-14 dschulze@adobe.com
	Added example for 'mask-box-image'

2012-08-14 dschulze@adobe.com
	Add new example of masking in the intro.

2012-08-13 dschulze@adobe.com
	Add 'mask-box-image' property descriptions.
	Changed intitial values of 'mask-box-image' properties to match WebKit.

2012-08-13 dschulze@adobe.com
	Add 'mask-box-image' properties, description follows.
	Changed pseudo-stacking-context to stacking context.

2012-08-12 dschulze@adobe.com
	Add 'clip-path' to specification uppen a request of the SVG WG.

2012-08-12 dschulze@adobe.com
	Created new sections for Mask and Mask Box Image.

2012-08-13 bbirtles@mozilla.com
	Add DOM reference. Make Selector 4 reference normative.
