@@ -1,4 +1,8 @@
-2012-09-26 bbirtles@mozilla.com
+2012-10-02 dschulze@adobe.com
+	Added 'alpha' and 'luminance' keywords to mask reference syntax.
+	Specified how mask images of different masking types are combined.
+
+2012-09-26 dschulze@adobe.com
 	Added Brian as editor to the spec.
 
 2012-09-25 bbirtles@mozilla.com
